# mdtools

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
README_sections/: hierarchy.json
README_sections/sections/: 01-mdtools.md
README_sections/sections/01-mdtools/: 01-section.md  03-section.md  04-section.md  05-mdtoolscore.md  06-section.md  07-section.md
docs/glossary/: README.md  defs.yaml
docs/glossary/README_sections/: hierarchy.json
docs/plans/: core-refactor.md
docs/plans/core-refactor_sections/: hierarchy.json
glossary/: README.md  __init__.py  __main__.py  cli.py  lister.py  loader.py  resolver.py
glossary/README_sections/: hierarchy.json
glossary/README_sections/sections/: 01-glossary.md
glossary/tests/: test_cli.py  test_loader.py  test_resolver.py
langfilter/: README.md  cli.py  filter.py  implementation_plan.md
langfilter/README_sections/: hierarchy.json
langfilter/implementation_plan_sections/: hierarchy.json
langfilter/tests/: README.md  test_filter.py
mdhtml_rewrite/: README.md  cli.py  inventory.py  rewrite.py
mdhtml_rewrite/README_sections/: hierarchy.json
mdhtml_rewrite/tests/: test_convert.py  test_rewrite.py
mdsplit/: README.md  cli.py  parser.py  schema.py
mdsplit/README_sections/: hierarchy.json
mdsplit/tests/: test_parser.py
mdtools/: build_cli.py  main.py
mdtools/core/: io.py  mdscan.py  pandoc.py
mdtools/tests/: test_build_cli.py  test_cli_help.py
skills/bilingual-export/: SKILL.md
skills/glossary-markers/: SKILL.md
skills/html-to-qmd/: SKILL.md
skills/sectioned-docs/: SKILL.md
(+115 files in other folders)
